--- a/index.html
+++ b/index.html
@@ -20,6 +20,86 @@
     <title>NoNameYet</title>
 </head>
 <body>
+
+    <div class="container h-100">
+        <div class="row">
+            <div class="col-3">
+                <p class="border border-dark p-2 mt-2">Règles</p>
+            </div>
+        </div>
+        <div class="row">
+
+            <!-- Visible for mobile -->
+            <div class="col-12 d-block d-sm-none">
+                <p class="border border-dark mb-3 p-3">Titre</p>
+            </div>
+
+            <div class="col-6 col-sm-4">
+                <p class="border border-dark p-3">Timer</p>
+            </div>
+
+            <!-- Display none for mobile -->
+            <div class="col-4 d-none d-sm-block">
+                <p class="border border-dark p-3">Titre</p>
+            </div>
+            <div class="col-6 col-sm-4">
+                <p class="border border-dark p-3">Score</p>
+            </div>
+        </div>
+
+        <div class="row mt-5 text-center">
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="rounded-circle border border-dark circleSize">
+
+                </div>
+            </div>
+        </div>
+
+    </div>
     
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
