ajout text-center

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="container h-100">
         <div class="row">
             <div class="col-3">
-                <p class="border border-dark p-2 mt-2">Règles</p>
+                <p class="border border-dark p-2 mt-2 text-center">Règles</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row text-center">
 
             <!-- Visible for mobile -->
             <div class="col-12 d-block d-sm-none">
@@ -35,7 +35,7 @@
             </div>
 
             <div class="col-6 col-sm-4">
-                <p class="border border-dark p-3">Timer</p>
+                <p class="border border-dark p-3">00:00:00</p>
             </div>
 
             <!-- Display none for mobile -->
