--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <div class="container h-100">
+    <div class="container h-100 d-none">
         <div class="row">
             <div class="col-3">
                 <p class="border border-dark p-2 mt-2 text-center">Règles</p>
