Fin page accueil

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,8 +20,38 @@
 
     <title>NoNameYet</title>
 </head>
+
 <body>
-    
+
+
+    <div class="container-fluid">
+        <div class="row pb-2 mb-5">
+            <div class="col-12 d-flex justify-content-center">
+                <p id="gameTitle" class="p-4 text-center">Tape ton prof !</p>
+            </div>
+        </div>
+
+        <div class="row rules pt-3 text-center m-auto">
+            <div class="col-12 d-flex justify-content-center flex-column">
+                <p class="px-3 pt-3">Tu as toujours rêvé de taper ton professeur méchant ?! "Tape ton prof" te le permet ! Le but du jeu ressemble au tape taupe, mais c'est tes profs qu'il faut frapper (ça marche aussi avec les formateurs...) ! Les têtes de tes profs préférés
+                    apparaissent à l'écran de façon aléatoire. Déchaines-toi et tape le plus vite possible sur leurs têtes ! Le jeu est infini est s'arrête quand les profs auront eu raison de toi en étant trop rapide pour esquiver tes claques !
+                </p>
+                <p class="px-3">Déchaînes-toi !!!</p>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-12 text-center">
+                <img id="qrcode" src="assets/img/qrcode.jpg" alt="qrcode">
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
@@ -32,4 +63,5 @@
     <!-- Main js -->
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
