--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="col">
                 <p class="btn btn-success" data-toggle="modal" data-target="#modalRegles">Règles</p>
             </div>
-            <div class="col">
+            <div class="col d-flex justify-content-end">
                 <p class="btn btn-success" id="startGame">Lancez le jeu</p>
             </div>
         </div>
