--- a/index.html
+++ b/index.html
@@ -21,6 +21,46 @@
 </head>
 <body>
     
+
+    <div class="row test m-0 align-content-center justify-content-center">
+        <div class="col-8 d-flex flex-column">
+            <div class="row w-100 justify-content-center">
+                <div class="col-2 headContainer">
+                    <img class="imgHead" src="" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+            </div>
+            <div class="row w-100 justify-content-center">
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+            </div>
+            <div class="row w-100 justify-content-center">
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="imgHead" src="" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
