--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 
-    <div class="container-fluid">
+    <div class="container-fluid imgContainer">
         <div class="row pb-2 mb-5">
             <div class="col-12 d-flex justify-content-center">
                 <p id="gameTitle" class="p-4 text-center">Tape ton prof !</p>
