Ajout de d'un systeme de score

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <title>NoNameYet</title>
 </head>
 <body>
+    <button type="button" class="btn btn-primary" id="button">CLICK</button>
+    <p>Score : <span id="score">0</span></p>
     
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
