fin structure matt

--- a/index.html
+++ b/index.html
@@ -21,87 +21,67 @@
 </head>
 <body>
 
-    <div class="container h-100">
-        <div class="row">
-            <div class="col">
-                <p class="btn btn-success" data-toggle="modal" data-target="#modalRegles">Règles</p>
-            </div>
-            <div class="col d-flex justify-content-end">
-                <p class="btn btn-success" id="startGame">Lancez le jeu</p>
-            </div>
-        </div>
-        <div class="row text-center">
+    <div class="container-fluid h-100" id="containerPageJeu">
 
-            <!-- Visible for mobile -->
-            <div class="col-12 d-block d-sm-none">
-                <p class="border border-dark mb-3 p-3">Titre</p>
+        <div class="row text-center d-flex justify-content-center align-items-center" id="boardGame">
+            <img class="w-100 h-100" src="assets/img/boardGame.jpg" alt="">
+            <div class="d-flex justify-content-between buttonRulesAndStart w-100">
+                <button class="btn btn-success" data-target="#modalRegles" data-toggle="modal">Règles & QR CODE</button>
+                <button class="btn btn-success" id="startGame">Jouer</button>
             </div>
-
-            <div class="col-6 col-sm-4">
-                <p class="border border-dark p-3" id="timerJeu">00:00:00</p>
+            <div class="d-flex" id="chronoPoints">
+                <div class="border border-dark p-2 m-2 " id="timerJeu">00:00:00</div>
+                <div class="border border-dark p-2 m-2 ">999 999 999</div>
             </div>
-
-            <!-- Display none for mobile -->
-            <div class="col-4 d-none d-sm-block">
-                <p class="border border-dark p-3">Titre</p>
-            </div>
-            <div class="col-6 col-sm-4">
-                <p class="border border-dark p-3">Score</p>
-            </div>
+            <div class="titleScore">Le meilleur titre du jeu</div>
         </div>
 
-        <div class="row mt-5 text-center">
+        <div class="row text-center p-3" id="contentGames">
             <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize" id="cercle1">
+                <div class="w-100 h-100 imgTable">
 
                 </div>
             </div>
             <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize" id="cercle2">
+                <div class="w-100 h-100 imgTable">
 
                 </div>
             </div>
             <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize">
-
-                </div>
-            </div>
-        </div>
-        <div class="row mt-5">
-            <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize">
-
+                <div class="w-100 h-100 imgTable">
                 </div>
             </div>
             <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize">
+                <div class="w-100 h-100 imgTable">
 
                 </div>
             </div>
             <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize">
+                <div class="w-100 h-100 imgTable">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="w-100 h-100 imgTable">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="w-100 h-100 imgTable">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="w-100 h-100 imgTable">
+
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="w-100 h-100 imgTable">
 
                 </div>
             </div>
         </div>
-        <div class="row mt-5">
-            <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize">
-
-                </div>
-            </div>
-            <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize">
-
-                </div>
-            </div>
-            <div class="col-4 d-flex justify-content-center">
-                <div class="rounded-circle border border-dark circleSize">
-
-                </div>
-            </div>
-        </div>
-
     </div>
 
     <div class="modal" tabindex="-1" id="modalRegles">
@@ -126,7 +106,6 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Jouer au jeu</button>
             </div>
           </div>
         </div>
