--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="border border-dark p-2 m-2 " id="timerJeu">00:00:00</div>
                 <div class="border border-dark p-2 m-2 ">999 999 999</div>
             </div>
-            <div class="titleScore">Le meilleur titre du jeu</div>
+            <div class="titleScore">Tape tes potes !!!</div>
         </div>
 
         <div class="row text-center p-3" id="contentGames">
@@ -95,9 +95,9 @@
             </div>
             <div class="modal-body">
                 <p class="text-justify">
-                    Tu as toujours rêvé de taper ton professeur méchant ?! "Tape ton prof" te le permet ! Le but du jeu ressemble au tape taupe, mais c'est 
-                    tes profs qu'il faut frapper (ça marche aussi avec les formateurs...) ! Les têtes de tes profs préférés apparaissent à l'écran de façon aléatoire.
-                    Déchaines-toi et tape le plus vite possible sur leurs têtes ! Le jeu est infini est s'arrête quand les profs auront eu raison de toi en étant
+                    Tu as toujours rêvé de taper ton pote méchant ?! "Tape ton pote" te le permet ! Le but du jeu ressemble au tape taupe, mais c'est 
+                    tes potes qu'il faut frapper (ça marche aussi avec les formateurs...) ! Les têtes de tes potes préférés apparaissent à l'écran de façon aléatoire.
+                    Déchaines-toi et tape le plus vite possible sur leurs têtes ! Le jeu est infini est s'arrête quand les potes auront eu raison de toi en étant
                     trop rapide pour esquiver tes claques !
                 </p>
                 <p>
