--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <title>NoNameYet</title>
 </head>
 <body>
-    
+        
+    <audio id="soundA" src="assets/sounds/damage_1.mp3"></audio>
+    <audio id="soundB" src="assets/sounds/damage_2.mp3"></audio>
 
     <div class="row test m-0 align-content-center justify-content-center">
         <div class="col-8 d-flex flex-column">
@@ -63,6 +65,9 @@
 
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
