--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="row mt-5">
             <div class="col-12 text-center">
-                <img id="qrcode" src="assets/img/qrcode.jpg" alt="qrcode">
+                <img id="qrcode" src="assets/img/frame (1).png" alt="qrcode">
             </div>
         </div>
     </div>
