--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="border border-dark p-2 m-2 " id="timerJeu">00:00:00</div>
                 <div class="border border-dark p-2 m-2 " id="score">0</div>
             </div>
-            <div class="titleScore">Tape tes potes !!!</div>
+            <div class="titleScore">Tape ton prof !!!</div>
         </div>
 
         <div class="row text-center p-3" id="contentGames">
